# inventory

./: .gitignore  .python-version  Dockerfile  README.rst  Readme.md  default.env  docker-compose.yaml  entrypoint.sh  inventory.service  manage.py  pyproject.toml  shell.nix
inventory/: apps.py  urls.py
inventory/admin/: __init__.py  containers.py  distributor.py  form_factor.py  item.py  layout.py  manufacturer.py  settings.py  tag.py
inventory/migrations/: 0001_initial.py  0002_auto_20200803_2340.py  0002_base_data.py  0003_alter_tag_options_alter_area_container_and_more.py  0003_auto_20200804_0030.py  0003_item_size.py  0004_alter_default_ordering.py  0004_auto_20200804_0055.py  0004_auto_20201222_1858.py  0005_alter_sorting_collation.py  0005_auto_20200808_0135.py  0005_settings.py  0006_item_count_item_low_count.py  0006_remove_documentation_item.py  0007_item_documentation.py  0007_settings_track_amount.py  0008_settings_currency_settings_currency_symbol_and_more.py
inventory/models/: __init__.py  area.py  box.py  container.py  distributor.py  documentation.py  form_factor.py  item.py  layout.py  manufacturer.py  settings.py  tag.py  workshop.py
inventory/templates/: base.html
inventory/templates/inventory/: area_detail.html  box-detail.html  box-generic.html  box-ikea-glis.html  box-ikea-samla.html  box-pollin-sorter.html  box-raaco-1240-123.html  box-raaco-616-123.html  box-raaco-928-123.html  box-raaco-even.html  box-raaco-simple.html  box-smd-box-all.html  box-smd-boxall.html  box_detail.html  (+20 more)
inventory/templatetags/: currency.py  formatstring.py  hilight.py
inventory/views/: __init__.py  area.py  box.py  distributor.py  index.py  item.py  manufacturer.py  onboarding.py  search.py  tag.py  utils.py  workshop.py
inventory_project/: asgi.py  settings.py  urls.py  wsgi.py
(+6 files in other folders)
