[tool.poetry]
name = "inventory"
version = "0.1.0"
description = ""
authors = ["Johannes Schriewer <hallo@dunkelstern.de>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
gunicorn = "^20.0.0"
whitenoise = "^6.6.0"
commentjson = "^0.9.0"
psycopg = "^3.1.0"
django-nested-admin = "^4.0.0"
pillow = "^10.1.0"

[tool.poetry.dev-dependencies]
mypy = "*"
flake8 = "*"
pylint = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pylint]
max-line-length=120