[tool.poetry]
name = "inventory"
version = "1.0.0"
description = ""
authors = ["Johannes Schriewer <hallo@dunkelstern.de>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5"
gunicorn = "^20"
whitenoise = "^6.6"
commentjson = "^0.9"
psycopg = { version = "^3", extras = [ "binary" ] }
django-nested-admin = "^4.0.0"
pillow = "^10"

[tool.poetry.group.dev.dependencies]
mypy = "*"
flake8 = "*"
pylint = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pylint]
max-line-length=120